Fix mobile z-index issue in drawer-cards and grid-marquee blocks

--- a/express/code/blocks/grid-marquee/grid-marquee.css
+++ b/express/code/blocks/grid-marquee/grid-marquee.css
@@ -150,6 +150,7 @@ main .section .grid-marquee h1 {
   justify-content: space-between;
   position: sticky;
   top: 0;
+  z-index: 2;
   background-color: var(--color-white);
   border-bottom: 1px solid #0000001a;
 }
